chore(package): update akutil dependencies to 1.0.0
affects: ak-avatar, ak-badge, ak-blanket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-footer, ak-editor-hyperlink-edit, ak-editor-icon, ak-editor-popup, ak-editor-popup-text-input, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-text-formatting, ak-icon, ak-inline-dialog, ak-layer, ak-navigation, ak-page, akutil-component-template, pf-mention

--- a/packages/ak-editor-toolbar-text-formatting/package.json
+++ b/packages/ak-editor-toolbar-text-formatting/package.json
@@ -14,13 +14,13 @@
   "license": "Apache-2.0",
   "author": "Atlassian Pty Ltd",
   "dependencies": {
-    "akutil-shared-styles": "*",
+    "akutil-shared-styles": "^33.1.0",
     "ak-editor-button": "*",
     "ak-editor-icon": "*",
     "skatejs": "^1.0.0"
   },
   "devDependencies": {
-    "akutil-react": "^0.0.4",
+    "akutil-react": "^1.0.0",
     "prosemirror": "*"
   },
   "repository": {
