--- a/packages/ak-navigation/package.json
+++ b/packages/ak-navigation/package.json
@@ -11,7 +11,7 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-shared-styles": "*",
+    "akutil-shared-styles": "^33.1.0",
     "ak-page": "^1.0.0",
     "ak-icon": "^1.0.0",
     "classnames": "^2.2.5",
@@ -21,7 +21,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^0.0.4",
+    "akutil-react": "^1.0.0",
     "react-lorem-component": "^0.10.0"
   },
   "repository": {
