--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -11,13 +11,13 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-shared-styles": "*",
-    "skatejs": "1.0.0-beta.12"
+    "akutil-shared-styles": "^33.1.0",
+    "skatejs": "^1.0.1"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^0.0.3"
+    "akutil-react": "^1.0.0"
   },
   "repository": {
     "type": "git",
