--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-import-resolver-webpack": "^0.4.0",
     "eslint-plugin-import": "^1.11.0",
     "file-loader": "^0.9.0",
+    "glob": "^7.0.5",
     "jsdoc-to-markdown": "^1.3.6",
     "json-loader": "^0.5.4",
     "karma": "1.1.0",
@@ -71,8 +72,7 @@
     "validate-commit-message": "^3.0.1",
     "wait-on": "^1.5.2",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "glob": "^7.0.5"
+    "webpack-dev-server": "^1.14.1"
   },
   "engines": {
     "npm": ">=3.8",
