fix(package): Publish an extra commonjs-only (no UMD) bundle for webpack consumption.
affects: ak-avatar, ak-badge, ak-blanket, ak-editor-bitbucket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-footer, ak-editor-hyperlink-edit, ak-editor-icon, ak-editor-popup, ak-editor-popup-text-input, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-text-formatting, ak-icon, ak-inline-dialog, ak-layer, ak-navigation, ak-page, akutil-common, akutil-component-template, akutil-cucumber, akutil-polyfills, akutil-react, pf-mention

--- a/packages/ak-editor-popup-text-input/package.json
+++ b/packages/ak-editor-popup-text-input/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:storybook:webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single ak-editor-popup-text-input",
     "pre-release": "lerna-semantic-release pre"
