--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -3,7 +3,8 @@
   "version": "2.0.0",
   "description": "",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:storybook:webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-avatar"
   },
