--- a/packages/ak-blanket/package.json
+++ b/packages/ak-blanket/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.1",
   "description": "ak-blanket webcomponent",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:storybook:webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-blanket"
   },
