--- a/packages/pf-mention/package.json
+++ b/packages/pf-mention/package.json
@@ -3,7 +3,8 @@
   "version": "1.2.5",
   "description": "pf-mention webcomponent",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:storybook:webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single pf-mention"
   },
