--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -4,7 +4,7 @@
   "description": "An inline dialog UI component",
   "main": "dist/bundle.js",
   "webpack": "dist/bundle-cjs.js",
-  "ak:storybook:webpack": "src/index.js",
+  "ak:webpack:raw": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-inline-dialog",
     "pre-release": "lerna-semantic-release pre"
