--- a/packages/akutil-cucumber/package.json
+++ b/packages/akutil-cucumber/package.json
@@ -4,7 +4,7 @@
   "description": "Cucumber steps for AtlasKit components",
   "main": "dist/bundle.js",
   "webpack": "dist/bundle-cjs.js",
-  "ak:storybook:webpack": "src/index.js",
+  "ak:webpack:raw": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single akutil-cucumber"
   },
