--- a/packages/pf-mention/package.json
+++ b/packages/pf-mention/package.json
@@ -4,7 +4,7 @@
   "description": "pf-mention webcomponent",
   "main": "dist/bundle.js",
   "webpack": "dist/bundle-cjs.js",
-  "ak:storybook:webpack": "src/index.js",
+  "ak:webpack:raw": "src/index.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single pf-mention"
   },
