--- a/packages/ak-editor-button/package.json
+++ b/packages/ak-editor-button/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "akutil-react": "^1.0.0",
-    "ak-editor-icon": "^2.0.1"
+    "ak-editor-icon": "^2.0.1",
+    "akutil-common": "^1.0.0"
   },
   "repository": {
     "type": "git",
