--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -30,3 +30,4 @@ pipelines:
           - npm run validate/package.json
           - npm run lint
           - npm run test/browserstack/ci
+          - npm run pr/storybook
