--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -19,6 +19,7 @@
     "skatejs": "^1.0.0"
   },
   "devDependencies": {
+    "akutil-common-test": "^1.0.0",
     "akutil-react": "^1.0.0"
   },
   "repository": {
