--- a/packages/ak-badge/package.json
+++ b/packages/ak-badge/package.json
@@ -19,6 +19,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
+    "akutil-common-test": "^1.0.0",
     "akutil-react": "^1.0.0"
   },
   "repository": {
