--- a/packages/ak-editor-button/package.json
+++ b/packages/ak-editor-button/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "akutil-react": "^1.0.0",
     "ak-editor-icon": "^2.0.1",
-    "akutil-common": "^1.0.0"
+    "akutil-common-test": "^1.0.0"
   },
   "repository": {
     "type": "git",
