--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -11,13 +11,13 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-common": "^1.0.0",
     "akutil-shared-styles": "^33.1.0",
     "skatejs": "^1.0.0"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
+    "akutil-common-test": "^1.0.0",
     "akutil-react": "^1.0.0"
   },
   "repository": {
