--- a/packages/akutil-shared-styles/package.json
+++ b/packages/akutil-shared-styles/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "camelcase": "^3.0.0",
+    "classnames": "^2.2.5",
     "glob": "^7.0.5",
     "less-vars-to-js": "^1.1.1"
   }
