--- a/packages/ak-button/package.json
+++ b/packages/ak-button/package.json
@@ -19,7 +19,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "akutil-react": "^1.0.0",
-    "custom-event-polyfill": "0.2.2"
+    "custom-event-polyfill": "0.2.2",
+    "object-assign": "^4.1.0"
   },
   "repository": {
     "type": "git",
