--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -33,7 +33,7 @@
     "skatejs": "^1.0.0"
   },
   "devDependencies": {
-    "akutil-react": "0.0.4",
+    "akutil-react": "^1.0.0",
     "akutil-shared-styles": "^33.1.0"
   },
   "repository": {
