fix(component): temporary fix for webpack - eventually should use commonjs
affects: ak-avatar, ak-badge, ak-blanket, ak-button, ak-editor-bitbucket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-footer, ak-editor-hyperlink-edit, ak-editor-icon, ak-editor-popup, ak-editor-popup-text-input, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-lists, ak-editor-toolbar-text-formatting, ak-icon, ak-inline-dialog, ak-layer, ak-navigation, ak-page, akutil-common, akutil-common-test, akutil-component-template, akutil-cucumber, akutil-polyfills, akutil-react, akutil-shared-styles, pf-mention

see
https://bitbucket.org/atlassian/atlaskit/pull-requests/216/fix-package-publish-an-extra-commonjs-only/diff
, Brad's PR

--- a/packages/ak-blanket/package.json
+++ b/packages/ak-blanket/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "ak-blanket webcomponent",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-blanket"
   },
