--- a/packages/ak-badge/package.json
+++ b/packages/ak-badge/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "ak-badge webcomponent",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-badge"
   },
