--- a/packages/ak-button/package.json
+++ b/packages/ak-button/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "description": "ak-button webcomponent",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-button"
   },
