--- a/packages/akutil-cucumber/package.json
+++ b/packages/akutil-cucumber/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Cucumber steps for AtlasKit components",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single akutil-cucumber"
   },
