--- a/packages/ak-button-group/package.json
+++ b/packages/ak-button-group/package.json
@@ -17,7 +17,8 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^0.0.4"
+    "akutil-react": "^0.0.4",
+    "ak-button": "^0.2.0"
   },
   "repository": {
     "type": "git",
