--- a/packages/ak-tabs/package.json
+++ b/packages/ak-tabs/package.json
@@ -15,6 +15,7 @@
     "akutil-shared-styles": "*",
     "ak-editor-icon": "*",
     "classnames": "^2.2.5",
+    "keycode": "^2.1.4",
     "skatejs": "^1.2.1"
   },
   "author": "Atlassian Pty Ltd",
