--- a/packages/ak-button-group/package.json
+++ b/packages/ak-button-group/package.json
@@ -17,8 +17,9 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^0.0.4",
-    "ak-button": "^0.2.0"
+    "akutil-react": "^1.0.0",
+    "ak-button": "^0.2.0",
+    "ak-icon": "^1.0.1"
   },
   "repository": {
     "type": "git",
