refactor: clean up after the review
affects: ak-inline-dialog, ak-layer

--- a/packages/ak-layer/package.json
+++ b/packages/ak-layer/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "akutil-common": "^2.0.0",
     "akutil-shared-styles": "^33.0.2",
-    "skatejs": "^1.0.0",
-    "popper.js": "https://github.com/FezVrasta/popper.js#27069a2ed604a962d18e0e11b916ac9a1529e14a"
+    "object-assign": "^4.1.0",
+    "popper.js": "https://github.com/FezVrasta/popper.js#27069a2ed604a962d18e0e11b916ac9a1529e14a",
+    "skatejs": "^1.0.0"
   },
   "repository": {
     "type": "git",
