--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ak-tag",
   "version": "1.0.0",
+  "ak:link": true,
   "description": "ak-tag webcomponent",
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
@@ -18,6 +19,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
+    "akutil-common-test": "^1.0.0",
     "akutil-react": "^1.0.0"
   },
   "repository": {
