--- a/packages/ak-button/package.json
+++ b/packages/ak-button/package.json
@@ -11,9 +11,9 @@
     "dist"
   ],
   "dependencies": {
+    "akutil-common": "^2.0.0",
     "akutil-shared-styles": "^33.1.0",
-    "skatejs": "^1.0.2",
-    "akutil-common": "^2.0.0"
+    "skatejs": "^1.2.2"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
