--- a/packages/ak-editor-popup/package.json
+++ b/packages/ak-editor-popup/package.json
@@ -11,8 +11,9 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-shared-styles": "^33.0.2",
+    "ak-blanket": "^1.0.0",
     "ak-layer": "^56.4.0",
+    "akutil-shared-styles": "^33.0.2",
     "classnames": "^2.2.5",
     "skatejs": "^1.2.2"
   },
@@ -22,8 +23,7 @@
     "akutil-react": "^1.0.0",
     "ak-editor-icon": "^2.0.0",
     "ak-editor-button": "^2.0.0",
-    "ak-editor-toolbar": "^2.0.0",
-    "ak-blanket": "^1.0.0"
+    "ak-editor-toolbar": "^2.0.0"
   },
   "repository": {
     "type": "git",
