--- a/packages/ak-editor-toolbar-block-type/package.json
+++ b/packages/ak-editor-toolbar-block-type/package.json
@@ -14,10 +14,10 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
+    "ak-blanket": "^1.0.0",
+    "ak-editor-button": "^2.0.1",
     "akutil-shared-styles": "^33.0.2",
     "classnames": "^2.2.5",
-    "ak-editor-button": "2.0.0",
-    "ak-blanket": "^1.0.0",
     "skatejs": "^1.2.2"
   },
   "devDependencies": {
