--- a/packages/ak-dropdown/package.json
+++ b/packages/ak-dropdown/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "akutil-shared-styles": "^33.1.0",
     "akutil-common": "^0.3.0",
-    "skatejs": "1.x",
+    "skatejs": "^1.2.2",
     "ak-layer": "^57.0.0",
     "classnames": "^2.2.5",
     "keycode": "^2.1.2"
