feat(component): Update tabs whenever the container is resized
affects: ak-tabs

Re-renders the tabs whenever the container or element is resized, instead of only when the window is
resized

Fixes AK-188

Conflicts:
	packages/ak-tabs/package.json
	packages/ak-tabs/src/index.js

--- a/packages/ak-tabs/package.json
+++ b/packages/ak-tabs/package.json
@@ -14,6 +14,7 @@
     "ak-icon": "^1.6.0",
     "akutil-shared-styles": "^33.7.0",
     "classnames": "^2.2.5",
+    "css-element-queries": "^0.3.2",
     "debounce": "^1.0.0",
     "keycode": "^2.1.4",
     "skatejs": "^1.2.1"
