refactor: remove skate as a dependency
BREAKING CHANGE: removes SkateJS from dependencies
affects: akutil-common

--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -13,8 +13,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
-    "keycode": "^2.1.2",
-    "skatejs": "^1.2.2"
+    "keycode": "^2.1.2"
   },
   "repository": {
     "type": "git",
