--- a/packages/ak-editor-toolbar-lists/package.json
+++ b/packages/ak-editor-toolbar-lists/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.2",
   "description": "",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:webpack:raw": "src/index.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single ak-editor-toolbar-lists",
     "pre-release": "lerna-semantic-release pre"
