--- a/packages/akutil-shared-styles/package.json
+++ b/packages/akutil-shared-styles/package.json
@@ -4,7 +4,8 @@
   "description": "Shared styles for AtlasKit components",
   "ak:link": true,
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:webpack:raw": "src/index.js",
   "scripts": {
     "gen-js": "node ./bin/generate-vars-export.js > src/index.js",
     "prepublish": "npm run gen-js && cd ../.. && npm run prepublish/single akutil-shared-styles"
