--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single ak-editor-bitbucket -- --bundle-deps",
+    "prepublish": "cd .. && npm run prepublish/single ak-editor-bitbucket",
     "pre-release": "lerna-semantic-release pre"
   },
   "files": [
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "author": "Atlassian Pty Ltd",
   "dependencies": {
+    "ak-blanket": "^1.0.0",
     "ak-editor-content": "^2.0.1",
     "ak-editor-footer": "^0.1.0",
     "ak-editor-toolbar": "^2.0.2",
@@ -25,8 +26,8 @@
     "atlassian-editorkit-markdown-inputrules-plugin": "^0.0.18",
     "browserkeymap": "^2.0.1",
     "markdown-it": "^7.0.0",
-    "prosemirror": "^0.8.3",
-    "skatejs": "^1.2.2"
+    "prosemirror": "atlassian/prosemirror#b674f90ee7931d7a467992bbc961ce4626cd63c4",
+    "skatejs": "^1.2.3"
   },
   "devDependencies": {
     "akutil-react": "^1.0.0",
