chore(linting): Ignore linting for ak-editor-bitbucket
TODO: TEMPORARY FIX: remove this once prosemirror fork is merged upstream

affects: ak-editor-bitbucket

--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "test/single/watch": "./build/bin/test.single.watch.sh",
     "validate": "npm ls >/dev/null && ./node_modules/.bin/lerna exec -- npm ls >/dev/null",
     "validate/lint-changed": "./build/bin/lint-changed.sh",
-    "validate/package.json": "pjv && ./node_modules/.bin/lerna exec -- pjv",
+    "validate/package.json": "pjv && ./node_modules/.bin/lerna exec --scope '!ak-editor-bitbucket' -- pjv",
     "webpack/single": "./build/bin/webpack.single.sh"
   }
 }
