chore(component): Update dependencies
affects: ak-tabs

Remove sinon and bump akutil-react

--- a/packages/ak-tabs/package.json
+++ b/packages/ak-tabs/package.json
@@ -20,8 +20,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^0.0.4",
-    "sinon": "git+https://github.com/sinonjs/sinon.git"
+    "akutil-react": "^1.0.0"
   },
   "repository": {
     "type": "git",
