--- a/packages/ak-tabs/package.json
+++ b/packages/ak-tabs/package.json
@@ -11,9 +11,9 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-common": "^2.0.0",
     "akutil-shared-styles": "*",
     "classnames": "^2.2.5",
+    "debounce": "^1.0.0",
     "keycode": "^2.1.4",
     "skatejs": "^1.2.1"
   },
