--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-import-resolver-webpack": "^0.5.1",
     "eslint-plugin-import": "^1.11.0",
     "file-loader": "^0.9.0",
+    "git-validate": "2.1.4",
     "glob": "^7.0.5",
     "jsdoc-to-markdown": "^1.3.6",
     "json-loader": "^0.5.4",
@@ -61,7 +62,6 @@
     "package-json-validator": "^0.6.1",
     "pascal-case": "^2.0.0",
     "postcss-loader": "^0.10.0",
-    "precommit-hook": "^3.0.0",
     "protractor": "^4.0.2",
     "protractor-console": "^2.0.1",
     "protractor-cucumber-framework": "^0.6.0",
@@ -110,7 +110,7 @@
     "cucumber/single": "./build/bin/cucumber.single.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
     "docs/single": "./build/bin/docs.single.sh",
-    "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg && npm run lerna/link",
+    "postinstall": "./node_modules/.bin/lerna bootstrap && node ./build/bin/pre-commit.install.js && validate-commit-msg && npm run lerna/link",
     "lerna/link": "./build/bin/no.js.npm.link.sh",
     "lint": "eslint --format 'node_modules/eslint-friendly-formatter' . --ext .js,.jsx",
     "pr/storybook": "./build/bin/storybook.static.pr.sh",
