--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -19,10 +19,12 @@
     "ak-editor-footer": "^0.1.0",
     "ak-editor-toolbar": "^2.0.2",
     "ak-editor-toolbar-block-type": "^0.0.2",
+    "ak-editor-toolbar-lists": "^0.0.2",
     "ak-editor-toolbar-hyperlink": "^0.0.3",
     "ak-editor-toolbar-text-formatting": "^2.0.0",
     "ak-editor-hyperlink-edit": "^0.1.1",
     "atlassian-editorkit-block-type-plugin": "^0.0.11",
+    "atlassian-editorkit-lists-plugin": "^0.0.1",
     "atlassian-editorkit-hyperlink-plugin": "^0.0.23",
     "atlassian-editorkit-image-upload-plugin": "^0.0.6",
     "atlassian-editorkit-markdown-inputrules-plugin": "^0.0.18",
