--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.11.6",
     "browserstack-local": "1.1.0",
     "camelcase": "^3.0.0",
     "commitizen": "^2.8.6",
@@ -127,6 +128,7 @@
     "storybook/static/single": "./build/bin/storybook.static.single.sh",
     "storybook/static/registry": "rm -rf ./stories && ./node_modules/.bin/lerna exec --concurrency=1 -- ../../build/bin/storybook.static.registry.sh",
     "test": "karma start karma.conf.js --single-run --no-auto-watch --reporters=dots",
+    "test/base": "mocha",
     "test/browserstack": "./build/bin/test.browserstack.sh",
     "test/browserstack/ci": "./build/bin/test.browserstack.ci.sh",
     "test/integration/browserstack": "node ./build/bin/test.integration.browserstack.js",
