--- a/packages/ak-navigation/package.json
+++ b/packages/ak-navigation/package.json
@@ -22,9 +22,10 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
+    "ak-avatar": "^2.1.0",
+    "akutil-common-test": "^1.0.0",
     "akutil-react": "^1.0.0",
-    "react-lorem-component": "^0.10.0",
-    "akutil-common-test": "^1.0.0"
+    "react-lorem-component": "^0.10.0"
   },
   "repository": {
     "type": "git",
