--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -3,7 +3,8 @@
   "version": "2.0.0",
   "main": "dist/bundle.js",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "license": "Apache-2.0",
   "author": "Atlassian Pty Ltd",
