feat: Make babel-runtime part of the package, so it can be de-duplicated on build by the consumer
affects: ak-avatar, ak-badge, ak-blanket, ak-button, ak-dropdown, ak-editor-bitbucket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-footer, ak-editor-hyperlink-edit, ak-editor-icon, ak-editor-popup, ak-editor-popup-text-input, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-lists, ak-editor-toolbar-text-formatting, ak-icon, ak-inline-dialog, ak-layer, ak-navigation, ak-page, akutil-common, akutil-common-test, akutil-component-template, akutil-cucumber, akutil-cz-atlaskit-changelog, akutil-polyfills, akutil-react, akutil-shared-styles, eslint-config-ak-base, eslint-config-ak-cucumber, eslint-config-ak-stories, eslint-config-ak-tests, pf-mention

--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -14,8 +14,9 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
-    "akutil-shared-styles": "^33.1.0",
     "akutil-common": "^2.0.0",
+    "akutil-shared-styles": "^33.1.0",
+    "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "skatejs": "^1.2.4"
   },
