--- a/packages/ak-blanket/package.json
+++ b/packages/ak-blanket/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "akutil-common": "^2.0.0",
     "akutil-shared-styles": "^33.1.0",
+    "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "skatejs": "^1.2.4"
   },
