--- a/packages/ak-editor-button/package.json
+++ b/packages/ak-editor-button/package.json
@@ -16,6 +16,7 @@
   "author": "Atlassian Pty Ltd",
   "dependencies": {
     "akutil-shared-styles": "^33.0.2",
+    "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "skatejs": "^1.2.4"
   },
