--- a/packages/ak-editor-footer/package.json
+++ b/packages/ak-editor-footer/package.json
@@ -16,6 +16,7 @@
   "author": "Atlassian Pty Ltd",
   "dependencies": {
     "ak-editor-icon": "^2.0.1",
+    "babel-runtime": "^6.11.6",
     "skatejs": "^1.2.4"
   },
   "devDependencies": {
