--- a/packages/ak-editor-toolbar-block-type/package.json
+++ b/packages/ak-editor-toolbar-block-type/package.json
@@ -18,6 +18,7 @@
     "ak-blanket": "^1.0.0",
     "ak-editor-button": "^2.0.1",
     "akutil-shared-styles": "^33.0.2",
+    "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "skatejs": "^1.2.4"
   },
