--- a/packages/ak-editor-toolbar-hyperlink/package.json
+++ b/packages/ak-editor-toolbar-hyperlink/package.json
@@ -13,11 +13,12 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-shared-styles": "^33.0.2",
     "ak-editor-button": "^2.0.0",
     "ak-editor-icon": "^2.0.0",
     "ak-editor-popup": "^0.1.0",
     "ak-editor-popup-text-input": "^0.2.0",
+    "akutil-shared-styles": "^33.0.2",
+    "babel-runtime": "^6.11.6",
     "skatejs": "^1.2.4"
   },
   "author": "Atlassian Pty Ltd",
