--- a/packages/ak-editor-toolbar/package.json
+++ b/packages/ak-editor-toolbar/package.json
@@ -16,6 +16,7 @@
   "author": "Atlassian Pty Ltd",
   "dependencies": {
     "akutil-shared-styles": "^33.1.0",
+    "babel-runtime": "^6.11.6",
     "skatejs": "^1.2.4"
   },
   "devDependencies": {
