--- a/packages/ak-icon/package.json
+++ b/packages/ak-icon/package.json
@@ -16,6 +16,7 @@
   "license": "SEE LICENSE IN LICENSE",
   "author": "Atlassian Pty Ltd",
   "dependencies": {
+    "babel-runtime": "^6.11.6",
     "skatejs": "^1.2.4"
   },
   "devDependencies": {
