--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -19,6 +19,7 @@
     "ak-layer": "^57.0.0",
     "akutil-common": "^2.0.0",
     "akutil-shared-styles": "^33.0.2",
+    "babel-runtime": "^6.11.6",
     "skatejs": "^1.2.4",
     "web-animations-js": "^2.2.1"
   },
