--- a/packages/ak-page/package.json
+++ b/packages/ak-page/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "^33.0.2",
+    "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "skatejs": "^1.2.4"
   },
