--- a/packages/akutil-cz-atlaskit-changelog/package.json
+++ b/packages/akutil-cz-atlaskit-changelog/package.json
@@ -6,6 +6,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
+    "babel-runtime": "^6.11.6",
     "cz-lerna-changelog": "^0.3.0",
     "lerna": "*"
   },
