--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -13,6 +13,7 @@
     "prepublish": "cd ../.. && npm run prepublish/single akutil-polyfills"
   },
   "dependencies": {
+    "babel-runtime": "^6.11.6",
     "skatejs-web-components": "^1.0.0"
   },
   "repository": {
