--- a/packages/akutil-shared-styles/package.json
+++ b/packages/akutil-shared-styles/package.json
@@ -25,5 +25,8 @@
     "classnames": "^2.2.5",
     "glob": "^7.0.5",
     "less-vars-to-js": "^1.1.1"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.11.6"
   }
 }
