--- a/packages/eslint-config-ak-base/package.json
+++ b/packages/eslint-config-ak-base/package.json
@@ -5,11 +5,12 @@
   "license": "Apache-2.0",
   "main": ".eslintrc",
   "dependencies": {
+    "babel-runtime": "^6.11.6",
     "eslint": "^2.0.0",
+    "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.4.2",
-    "eslint-plugin-react": "^5.1.1",
-    "eslint-config-airbnb": "^9.0.1"
+    "eslint-plugin-react": "^5.1.1"
   },
   "repository": {
     "type": "git",
