--- a/packages/pf-mention/package.json
+++ b/packages/pf-mention/package.json
@@ -16,6 +16,7 @@
     "ak-inline-dialog": "^70.0.0",
     "akutil-common": "^2.0.0",
     "akutil-shared-styles": "^33.1.0",
+    "babel-runtime": "^6.11.6",
     "es6-promise": "^3.2.1",
     "skatejs": "^1.2.4",
     "url-search-params": "^0.5.0",
