--- a/packages/ak-tag-group/package.json
+++ b/packages/ak-tag-group/package.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "^33.1.0",
-    "skatejs": "^1.0.0"
+    "babel-runtime": "^6.11.6",
+    "skatejs": "^1.2.4"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
