--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -13,8 +13,9 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "^33.2.0",
+    "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
-    "skatejs": "^1.0.1"
+    "skatejs": "^1.2.4"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
