--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -14,6 +14,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
+    "jss": "^5.4.0",
     "keycode": "^2.1.2"
   },
   "repository": {
