--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "karma-mocha-reporter": "^2.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
-    "lerna": "^2.0.0-beta.26",
+    "lerna": "github:atlassian/lerna#enhanced-bootstrap",
     "lerna-semantic-release": "^7.0.5",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
@@ -72,6 +72,9 @@
     "semantic-release": "~4.3.0",
     "stats.js": "^0.16.0",
     "style-loader": "^0.13.1",
+    "ts-loader": "^0.8.2",
+    "typescript": "^2.1.0-dev.20160826",
+    "typings": "^1.3.3",
     "url-loader": "^0.5.7",
     "validate-commit-message": "^3.0.1",
     "wait-on": "^1.5.2",
@@ -110,8 +113,7 @@
     "cucumber/single": "./build/bin/cucumber.single.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
     "docs/single": "./build/bin/docs.single.sh",
-    "postinstall": "./node_modules/.bin/lerna bootstrap && node ./build/bin/pre-commit.install.js && validate-commit-msg && npm run lerna/link",
-    "lerna/link": "./build/bin/no.js.npm.link.sh",
+    "postinstall": "./node_modules/.bin/lerna bootstrap && node ./build/bin/pre-commit.install.js && validate-commit-msg",
     "lint": "eslint --format 'node_modules/eslint-friendly-formatter' . --ext .js,.jsx",
     "pr/storybook": "./build/bin/storybook.static.pr.sh",
     "prepublish/single": "./build/bin/prepublish.single.sh",
@@ -121,7 +123,7 @@
     "release/changelog": "if [ -s .released-packages ]; then lerna-semantic-release post; else return 0; fi",
     "release/registry": "./build/bin/registry.sh",
     "shrinkwrap/update": "npm run clean && rm npm-shrinkwrap.json && npm install --ignore-scripts && npm shrinkwrap",
-    "storybook": "start-storybook -p 9001 -c ./build/storybook",
+    "storybook": "start-storybook -p 9002 -c ./build/storybook",
     "storybook/single": "./build/bin/storybook.single.sh",
     "storybook/static": "build-storybook -c ./build/storybook",
     "storybook/static/single": "./build/bin/storybook.static.single.sh",
