--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -24,12 +24,12 @@
     "ak-editor-toolbar-hyperlink": "^0.1.0",
     "ak-editor-toolbar-text-formatting": "^2.0.0",
     "ak-editor-hyperlink-edit": "^0.2.0",
-    "atlassian-editorkit-block-type-plugin": "^0.0.11",
-    "atlassian-editorkit-lists-plugin": "^0.0.1",
-    "atlassian-editorkit-hyperlink-plugin": "^0.0.23",
-    "atlassian-editorkit-image-upload-plugin": "^0.0.6",
-    "atlassian-editorkit-markdown-inputrules-plugin": "^0.0.18",
-    "atlassian-editorkit-text-formatting-plugin": "^0.0.4",
+    "ak-editor-plugin-block-type": "^1.0.0",
+    "ak-editor-plugin-hyperlink": "^1.0.0",
+    "ak-editor-plugin-lists": "^1.0.0",
+    "ak-editor-plugin-markdown-inputrules": "^1.0.0",
+    "ak-editor-plugin-text-formatting": "^1.0.0",
+    "ak-editor-plugin-image-upload": "^1.0.0",
     "browserkeymap": "^2.0.1",
     "lodash.invert": "^4.2.0",
     "markdown-it": "^7.0.0",
@@ -37,6 +37,7 @@
     "skatejs": "^1.2.4"
   },
   "devDependencies": {
+    "ak-editor-test": "^1.0.0",
     "akutil-react": "^1.0.0",
     "akutil-shared-styles": "^33.1.0"
   },
