feat(component): dropdown with avatars implementes
affects: ak-dropdown

--- a/packages/ak-dropdown/package.json
+++ b/packages/ak-dropdown/package.json
@@ -21,7 +21,8 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^1.0.0"
+    "akutil-react": "^1.0.0",
+    "ak-avatar": "^2.0.1"
   },
   "repository": {
     "type": "git",
