--- a/packages/akutil-react/package.json
+++ b/packages/akutil-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "akutil-react",
   "version": "1.0.1",
-  "description": "",
+  "description": "Toolbox for transforming a SkateJS-based WebComponent into a React component",
   "main": "dist/bundle.js",
   "webpack": "dist/bundle-cjs.js",
   "ak:webpack:raw": "src/index.js",
