fix: Fix the cucumber build
affects: ak-dropdown, akutil-cucumber

--- a/packages/ak-dropdown/package.json
+++ b/packages/ak-dropdown/package.json
@@ -3,7 +3,8 @@
   "version": "0.2.0",
   "description": "ak-dropdown webcomponent",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:webpack:raw": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-dropdown"
   },
