--- a/packages/akutil-cucumber/package.json
+++ b/packages/akutil-cucumber/package.json
@@ -1,10 +1,10 @@
 {
   "name": "akutil-cucumber",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Cucumber steps for AtlasKit components",
   "main": "dist/bundle.js",
   "webpack": "dist/bundle-cjs.js",
-  "ak:webpack:raw": "src/index.js",
+  "ak:webpack:raw": "src/general-steps.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single akutil-cucumber"
   },
