--- a/packages/ak-editor-icon/package.json
+++ b/packages/ak-editor-icon/package.json
@@ -20,7 +20,8 @@
   ],
   "dependencies": {
     "babel-runtime": "^6.11.6",
-    "skatejs": "^1.2.4"
+    "skatejs": "^1.2.4",
+    "uid": "^0.0.2"
   },
   "devDependencies": {
     "akutil-react": "^1.0.0",
