--- a/packages/ak-icon/package.json
+++ b/packages/ak-icon/package.json
@@ -17,7 +17,8 @@
   "author": "Atlassian Pty Ltd",
   "dependencies": {
     "babel-runtime": "^6.11.6",
-    "skatejs": "^1.2.4"
+    "skatejs": "^1.2.4",
+    "uid": "^0.0.2"
   },
   "devDependencies": {
     "idomizer": "^0.5.2",
