--- a/packages/pf-mention/package.json
+++ b/packages/pf-mention/package.json
@@ -19,6 +19,7 @@
     "babel-runtime": "^6.11.6",
     "es6-promise": "^3.2.1",
     "skatejs": "^1.2.4",
+    "uid": "^0.0.2",
     "url-search-params": "^0.5.0",
     "whatwg-fetch": "^1.0.0"
   },
