--- a/packages/ak-button/package.json
+++ b/packages/ak-button/package.json
@@ -23,7 +23,8 @@
     "akutil-common-test": "^1.3.0",
     "akutil-react": "^1.0.0",
     "custom-event-polyfill": "^0.3.0",
-    "object-assign": "^4.1.0"
+    "object-assign": "^4.1.0",
+    "ak-icon": "^1.1.0"
   },
   "repository": {
     "type": "git",
