--- a/packages/ak-button-group/package.json
+++ b/packages/ak-button-group/package.json
@@ -12,14 +12,15 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "*",
-    "skatejs": "1.0.2"
+    "skatejs": "1.2.4"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^1.0.0",
-    "ak-button": "^0.2.0",
-    "ak-icon": "^1.0.1"
+    "akutil-common-test": "^1.0.0",
+    "akutil-react": "^1.2.0",
+    "ak-button": "^0.5.0",
+    "ak-icon": "^1.3.1"
   },
   "repository": {
     "type": "git",
