--- a/packages/ak-button-group/package.json
+++ b/packages/ak-button-group/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "description": "ak-button-group webcomponent",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:webpack:raw": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-button-group"
   },
