--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "akutil-shared-styles": "^33.1.0",
     "babel-runtime": "^6.11.6",
+    "classnames": "^2.2.5",
     "skatejs": "^1.2.4"
   },
   "author": "Atlassian Pty Ltd",
