--- a/package.json
+++ b/package.json
@@ -139,5 +139,6 @@
     "validate/lint-changed": "./build/bin/lint-changed.sh",
     "validate/package.json": "pjv && ./node_modules/.bin/lerna exec -- pjv",
     "webpack/single": "./build/bin/webpack.single.sh"
-  }
+  },
+  "devDependencies": {}
 }
