--- a/packages/ak-button/package.json
+++ b/packages/ak-button/package.json
@@ -20,6 +20,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
+    "akutil-common-test": "^1.3.0",
     "akutil-react": "^1.0.0",
     "custom-event-polyfill": "0.2.2",
     "object-assign": "^4.1.0"
