--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -19,7 +19,7 @@
     "keycode": "^2.1.2"
   },
   "devDependencies": {
-    "custom-event-polyfill": "joscha/custom-event-polyfill#de24bd9"
+    "custom-event-polyfill": "^0.3.0"
   },
   "repository": {
     "type": "git",
