--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -24,7 +24,8 @@
     "web-animations-js": "^2.2.1"
   },
   "devDependencies": {
-    "akutil-react": "^1.0.0"
+    "akutil-react": "^1.0.0",
+    "custom-event-polyfill": "^0.3.0"
   },
   "repository": {
     "type": "git",
