--- a/packages/ak-dropdown/package.json
+++ b/packages/ak-dropdown/package.json
@@ -23,7 +23,8 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^1.0.0"
+    "akutil-react": "^1.0.0",
+    "custom-event-polyfill": "^0.3.0"
   },
   "repository": {
     "type": "git",
