chore(tests): stub tests for now

--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "storybook/static/single": "./build/bin/storybook.static.single.sh",
     "storybook/static/registry": "rm -rf ./stories && ./node_modules/.bin/lerna exec --concurrency=1 -- ../../build/bin/storybook.static.registry.sh",
     "test": "karma start karma.conf.js --single-run --no-auto-watch --reporters=dots",
+    "test/watch": "karma start karma.conf.js --no-single-run --auto-watch --reporters=dots",
     "test/base": "mocha",
     "test/browserstack": "./build/bin/test.browserstack.sh",
     "test/browserstack/ci": "./build/bin/test.browserstack.ci.sh",
