chore(build): Removes CHANGELOG.md from the git repo and only packages it
affects: ak-avatar, ak-badge, ak-blanket, ak-button, ak-button-group, ak-dropdown, ak-editor-bitbucket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-footer, ak-editor-hyperlink-edit, ak-editor-icon, ak-editor-popup, ak-editor-popup-text-input, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-lists, ak-editor-toolbar-text-formatting, ak-icon, ak-inline-dialog, ak-layer, ak-navigation, ak-page, akutil-common, akutil-common-test, akutil-component-template, akutil-cucumber, akutil-cz-atlaskit-changelog, akutil-polyfills, akutil-react, akutil-shared-styles, eslint-config-ak-base, eslint-config-ak-cucumber, eslint-config-ak-stories, eslint-config-ak-tests, pf-mention

AK-153

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "lerna": "^2.0.0-beta.26",
-    "lerna-semantic-release": "^7.0.5",
+    "lerna-semantic-release": "^8.0.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "minilog": "^3.0.1",
@@ -116,9 +116,8 @@
     "pr/storybook": "./build/bin/storybook.static.pr.sh",
     "prepublish/single": "./build/bin/prepublish.single.sh",
     "prune": "./node_modules/.bin/lerna exec -- npm prune && npm prune",
-    "release": "git diff --exit-code && lerna-semantic-release pre && lerna-semantic-release perform",
+    "release": "git diff --exit-code && lerna-semantic-release pre && lerna-semantic-release post && lerna-semantic-release perform",
     "release/announce": "[ -s .released-packages ] && cat .released-packages | sed 's/^/Released /' | xargs ./build/bin/hipchat_message.sh || return 0",
-    "release/changelog": "if [ -s .released-packages ]; then lerna-semantic-release post; else return 0; fi",
     "release/registry": "./build/bin/registry.sh",
     "shrinkwrap/update": "npm run clean && rm npm-shrinkwrap.json && npm install --ignore-scripts && npm shrinkwrap && npm run postinstall",
     "storybook": "start-storybook -p 9001 -c ./build/storybook",
