chore(component): Update package.json for updated build
affects: ak-tabs

dist should now build correctly

--- a/packages/ak-tabs/package.json
+++ b/packages/ak-tabs/package.json
@@ -1,15 +1,18 @@
 {
   "name": "ak-tabs",
   "version": "0.0.0",
-  "description": "ak-tabs webcomponent",
+  "description": "",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:webpack:raw": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-tabs"
   },
   "files": [
     "dist"
   ],
+  "author": "Atlassian Pty Ltd",
+  "license": "Apache-2.0",
   "dependencies": {
     "ak-icon": "^1.6.0",
     "akutil-shared-styles": "^33.7.0",
@@ -19,8 +22,6 @@
     "keycode": "^2.1.4",
     "skatejs": "^1.2.1"
   },
-  "author": "Atlassian Pty Ltd",
-  "license": "Apache-2.0",
   "devDependencies": {
     "akutil-react": "^1.0.0",
     "akutil-common-test": "^1.3.0"
