chore: Synchronise deps on akutil-shared-styles to the latest.
affects: ak-avatar, ak-badge, ak-blanket, ak-button, ak-dropdown, ak-editor-bitbucket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-footer, ak-editor-hyperlink-edit, ak-editor-popup, ak-editor-popup-text-input, ak-editor-prosemirror, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-lists, ak-editor-toolbar-text-formatting, ak-inline-dialog, ak-layer, ak-navigation, ak-page, akutil-component-template, pf-mention

--- a/packages/ak-page/package.json
+++ b/packages/ak-page/package.json
@@ -12,18 +12,18 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-shared-styles": "^33.1.0",
+    "akutil-shared-styles": "^33.7.0",
     "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "skatejs": "^1.2.5"
   },
   "peerDependencies": {
-    "ak-navigation": "^3.0.0"
+    "ak-navigation": "*"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "ak-navigation": "^3.0.0",
+    "ak-navigation": "*",
     "akutil-react": "^1.0.0"
   },
   "repository": {
