chore: Switch ak-page to depend on ak-navigation@* to temporarily side-step the broken 3.0.0 release
affects: ak-page

--- a/packages/ak-page/package.json
+++ b/packages/ak-page/package.json
@@ -18,12 +18,12 @@
     "skatejs": "^1.2.5"
   },
   "peerDependencies": {
-    "ak-navigation": "^3.0.0"
+    "ak-navigation": "*"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "ak-navigation": "^3.0.0",
+    "ak-navigation": "*",
     "akutil-react": "^1.0.0"
   },
   "repository": {
