chore: Add akutil-common dependency to ak-theme that was missing.
affects: ak-theme

--- a/packages/ak-theme/package.json
+++ b/packages/ak-theme/package.json
@@ -12,6 +12,7 @@
     "dist"
   ],
   "dependencies": {
+    "akutil-common": "^2.4.0",
     "akutil-shared-styles": "^33.1.0",
     "skatejs": "^1.2.5"
   },
