feat: Add tag removal animation
affects: ak-tag

--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -1,4 +1,5 @@
 {
+  "ak:link": true,
   "name": "ak-tag",
   "version": "1.0.0",
   "description": "ak-tag webcomponent",
@@ -12,7 +13,7 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-shared-styles": "^33.2.0",
+    "akutil-shared-styles": "^33.8.0",
     "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "skatejs": "^1.2.5"
