refactor(component): Avoid symbols in favour of normal property names to leverage TypeScript.
affects: ak-editor-bitbucket, ak-editor-test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": false,
+    "experimentalDecorators": true,
     "jsx": "preserve",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
