--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -20,25 +20,27 @@
     "ak-editor-content": "^2.0.1",
     "ak-editor-footer": "^1.0.0",
     "ak-editor-hyperlink-edit": "^1.0.0",
-    "ak-editor-prosemirror": "^1.0.0",
-    "ak-editor-toolbar": "^2.0.2",
-    "ak-editor-toolbar-block-type": "^2.0.1",
-    "ak-editor-toolbar-hyperlink": "^1.0.0",
-    "ak-editor-toolbar-lists": "^1.0.0",
-    "ak-editor-toolbar-text-formatting": "^2.0.0",
     "ak-editor-plugin-block-type": "^1.0.0",
     "ak-editor-plugin-hyperlink": "^1.0.0",
     "ak-editor-plugin-image-upload": "^1.0.0",
     "ak-editor-plugin-lists": "^1.0.0",
     "ak-editor-plugin-markdown-inputrules": "^1.0.0",
     "ak-editor-plugin-text-formatting": "^1.0.0",
+    "ak-editor-prosemirror": "^1.0.0",
+    "ak-editor-toolbar": "^2.0.2",
+    "ak-editor-toolbar-block-type": "^2.0.1",
+    "ak-editor-toolbar-hyperlink": "^1.0.0",
+    "ak-editor-toolbar-lists": "^1.0.0",
+    "ak-editor-toolbar-text-formatting": "^2.0.0",
+    "autobind-decorator": "^1.3.3",
     "babel-runtime": "^6.11.6",
     "browserkeymap": "^2.0.1",
     "markdown-it": "^7.0.0",
-    "skatejs": "^1.2.5"
+    "skatejs": "^1.3.1"
   },
   "devDependencies": {
     "ak-editor-test": "^1.0.0",
+    "akutil-common-test": "^1.0.0",
     "akutil-react": "^1.0.0",
     "akutil-shared-styles": "^33.1.0"
   },
