--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -9,8 +9,7 @@
     "prepublish": "cd ../.. && npm run prepublish/single ak-tag"
   },
   "files": [
-    "dist",
-    "docs"
+    "dist"
   ],
   "dependencies": {
     "akutil-common": "^2.0.0",
