chore: remove unused pre-release script
affects: ak-editor-bitbucket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-footer, ak-editor-hyperlink-edit, ak-editor-icon, ak-editor-popup, ak-editor-popup-text-input, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-lists, ak-editor-toolbar-text-formatting, ak-icon, ak-inline-dialog, ak-layer

--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -7,8 +7,7 @@
   "ak:webpack:raw": "src/index.tsx",
   "typings": "src/index.tsx",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single ak-editor-bitbucket",
-    "pre-release": "lerna-semantic-release pre"
+    "prepublish": "cd .. && npm run prepublish/single ak-editor-bitbucket"
   },
   "files": [
     "dist"
